@@ -34,6 +34,9 @@
 <!ENTITY auto-viqr-check.accesskey "Q">
 <!ENTITY auto-viqr-star-check.accesskey "R">
 
+<!ENTITY script-enabled-check.label "Disable input editing scripts inside web pages">
+<!ENTITY script-enabled-check.accesskey "w">
+
 <!-- Ignored Textboxes tab -->
 
 <!ENTITY ignored-panel.label "Ignored Textboxes">
