@@ -30,6 +30,9 @@
 <!ENTITY auto-viqr-check.accesskey "Q">
 <!ENTITY auto-viqr-star-check.accesskey "R">
 
+<!ENTITY script-enabled-check.label "Tắt các script bộ gõ ở trong trang Web">
+<!ENTITY script-enabled-check.accesskey "W">
+
 <!-- Ignored Textboxes tab -->
 
 <!ENTITY ignored-panel.label "Bỏ qua">
